2006-04-08  Wolfgang Baer  <WBaer@gmx.de>

	* javax/swing/plaf/basic/BasicInternalFrameTitlePane.java: 
	(CLOSE_CMD, ICONIFY_CMD, MAXIMIZE_CMD, MOVE_CMD, RESTORE_CMD, SIZE_CMD):
	No longer constants.
	(static_initializer): Added to initialize above fields.
	* javax/accessibility/AccessibleRelation.java (LABEL_FOR, LABELED_BY, 
	MEMBER_OF, CONTROLLER_FOR, CONTROLLED_BY): No longer constants.
	(static_initializer): Added to initialize above fields.

2006-04-08  Wolfgang Baer  <WBaer@gmx.de>

	* java/awt/Dialog.java: Improved documentation all over.
	(Dialog(Frame)): If gc is null use the owners GraphicsConfiguration.
	(Dialog(Dialog)): Likewise.

2006-04-08  Mark Wielaard  <mark@klomp.org>

	* java/util/jar/JarFile.java (provider): New static field.
	(verify, verifyHashes, EntryInputStream.<init>): Pass provider
	to `getInstance.'

2006-04-08  Mark Wielaard  <mark@klomp.org>

	PR 27081
	* java/lang/StackTraceElement.java (toString): Don't add space
	between type and source indicator.

2006-04-07  Casey Marshall  <csm@gnu.org>

	Fixes PR classpath/24464	
	* java/util/jar/JarFile.java (verify, verifyHashes,
	EntryInputStream.<init>): pass the Gnu provider directly to
	`getInstance.'

2006-04-08  Raif S. Naffah  <raif@swiftdsl.com.au>

	PR classpath/27071
	* gnu/java/security/hash/Whirlpool.java: Updated documentation.
	(DIGEST0): Use version 3 test vector.
	(Sd): Removed.
	(S_box): New field: Version 3 S-box values.
	(<clinit>): Use Version 3 circulant matrix to construct lookup tables.
	(transform): Formating.
	(padBuffer): Likewise.
	(getResult): Likewise.
	(selfTest): Likewise.

2006-04-07  Tom Tromey  <tromey@redhat.com>

	* java/util/InvalidPropertiesFormatException.java
	(serialVersionUID): New field.
	(readObject, writeObject): New methods.
	* java/util/Arrays.java (toString): Javadoc fixes.
	* java/net/URLConnection.java: Cleaned up imports.
	* java/lang/reflect/ParameterizedType.java: Javadoc fix.
	* java/lang/reflect/MalformedParameterizedTypeException.java