@@ -1418,23 +1418,6 @@ public abstract class SynthPainter
   }
 
   /**
-   * Paints the border of a split pane's divider.
-   *
-   * @param ctx the synth context identifying the component and region for
-   *        painting
-   * @param g the graphics context to use for painting
-   * @param x the X coordinate of the area to paint
-   * @param y the Y coordinate of the area to paint 
-   * @param w the width of the area to paint
-   * @param h the height of the area to paint
-   */
-  public void paintSplitPaneDividerBorder(SynthContext ctx, Graphics g, int x,
-                               int y, int w, int h)
-  {
-    // Nothing to do here.
-  }
-
-  /**
    * Paints the background of a tabbed pane.
    *
    * @param ctx the synth context identifying the component and region for
